--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Git and GitHub</title>
+    <style>
+        body
+        {
+            background-color: aqua;
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome</h1>
+    <h2>Welcome to my Live-Web Page</h2>
 </body>
 </html>
