--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <h2>Welcome to my Live-Web Page</h2>
+    <h1>Welcome to My Live-Web Page</h1>
+    <h2>About Me</h2>
+    <p>My name is Kardam Pandey. I am a student of B.Tech.(CSE) Vth Semester at G.L.A. University, Mathura, Uttar Pradesh. My permanent residence is in Varanasi, Uttar Pradesh. My hobbies are to play football and basketball, reading books(mostly novels and short stories) and learning about the universe. I have some key skills also like problem solving.</p>
 </body>
 </html>
